vscode-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vscode-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vscode-server
  template:
    metadata:
      labels:
        app: vscode-server
    spec:
      containers:
        - name: vscode-server
          image: codercom/code-server:latest
          ports:
            - containerPort: 8080
