vscode-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vscode-service
spec:
  selector:
    app: vscode-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
